--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body { color: #555; margin: 0; font-family: 'Antic Slab', sans-serif;}
 #header-nav { display: block; float: right; margin-top: 0;}
 #header-nav li { display: inline; padding-left: 20px;}
 .container { max-width: 1000px; margin: 0 auto;}
-#footer { background-color: #154360; padding: 50px 0;}
+#footer { background-color: #2f2f2f; padding: 50px 0;}
 #footer h4 { color: white; text-transform: uppercase; letter-spacing: 0.1em;}
 #footer p {color: white;}
 .column { min-width: 300px; display: inline-block; vertical-align: top;}
