--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,7 @@ a:hover, #footer a:hover {
 #header-title {
   display: block;
   float: left;
-  font-size: 35px;
+  font-size: 38px;
   font-weight: bold;
 }
 
@@ -76,7 +76,7 @@ a:hover, #footer a:hover {
 
 .btn{
   background-color: #154360;
-  border: 2px solid #8c6b48;
+  border: 2px solid white;
   border-radius: 12px;
   color: white;
   padding: 12px 40px;
