--- a/styles.css
+++ b/styles.css
@@ -1,206 +1,260 @@
-@import url('https://fonts.googleapis.com/css?family=Alef:400,700');
-@import url('https://fonts.googleapis.com/css?family=Bungee+Shade:400,600');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&display=swap');
 
-/*Universal styles*/
+/* Universal */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
 
 body {
-  color: #222;
-  margin: 0;
-  font-family: 'Alef', sans-serif;
-  background-image: url("old_wall.png");
+   background-image: url(images/old_wall.png);
+   color: #07304e;
+   margin: 0, auto;
 }
 
-* {
-  box-sizing: border-box;
+/* Header/Navbar */
+
+.header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 20px 10%;
+    background: #07304e;
+    display: flex;
+    justify-content:space-between;
+    align-items: center;
+    z-index: 100;
+
 }
 
-h1, h2, h3, h4, {
-  color: #333;
+.logo {
+    display: block;
+    font-size: 40px;
+    color: #ededed;
+    text-decoration: none;
+    font-weight: 600;
+
 }
 
-p {
-  line-height: 1.5;
+.navbar a { 
+    display: block;
+    float: left;
+    font-size: 18px;
+    color:#ededed;
+    text-decoration: none;
+    font-weight: 500;
+    margin-left: 35px;
 }
 
-a {
-  color: #333;
+.navbar a:hover, 
+.navbar a.active {
+    color: #00abf0;
 }
 
-a:hover, #footer a:hover {
-  color: #8c6b48;
+/* Home Page Stylings */
+.home {
+    height: 100vh;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 70px 10% 0;
+}
+.home-content {
+    max-width: 800px;
 }
 
-/*Header*/
-
-header {
-  background-color: #242f44;
-  height: 150px;
-  line-height: 210px;
+.home-content h1 {
+    font-size: 56px;
+    font-weight: 700;
+    line-height: 1.2;
 }
 
-.container {
-  max-width: 1400px;
-  margin: 0 auto;
+.home-content h3 {
+    font-size: 28px;
+    font-weight: 700;
+    color:#038cc2;
 }
 
-#header a {
-  color: white;
-  text-decoration: none;
-  text-transform: uppercase;
-  letter-spacing: 0.1em;
+.home-content p {
+    font-family: 'Quicksand', sans-serif;
+    font-size: 18px;
+    font-weight: 600;
+    margin: 20px 0 40px;
 }
 
-#header a:hover {
-  color: #8c6b48;
+.home-content .btn-box {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 500px;
+    height: 50px;
 }
 
-#header-title {
-  display: block;
-  float: left;
-  font-family: 'Bungee Shade', sans-serif;
-  font-size: 40px;
-  font-weight: bold;
+/* Main Profile Image*/
+.home-img {
+    width: 450px;
+    height: 450px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 16px solid #07304e;
+    border-radius: 50%;
 }
 
-#header-nav {
-  display: block;
-  float: right;
-  margin-top: 0;
-  font-family: 'Alef', sans-serif;
+.profile-image img{
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    padding-top: 7px;
+    max-width: 420px;
+    overflow: hidden;
+    border-radius: 50%;
 }
 
-#header-nav li {
-  display: inline;
-  padding-left: 20px;
+/* Info Buttons */
+.btn-box a {
+    position: relative;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 150px;
+    height: 100%;
+    background: #038cc2;
+    border: 2px solid #038cc2;
+    border-radius: 8px;
+    font-size: 17px;
+    color: #07304e;
+    text-decoration: none;
+    font-weight: 600;
+    letter-spacing: 1px;
+    z-index: 1;
+    overflow: hidden;
+    transition: .75s;
 }
 
-/*Header Navigation buttons*/
-
-.btn {
-  background-color: #154360;
-  border: 2px solid white;
-  border-radius: 12px;
-  color: white;
-  padding: 12px 40px;
-  text-align: center;
-  text-decoration: none;
-  font-size: 14px;
+.btn-box a:hover {
+    color: #038cc2;
 }
 
-.btn:hover {
-  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+.btn-box a:nth-child(2) {
+    background: transparent;
+    color: #038cc2;
 }
 
-/*Post/About*/
-
-.post, .about {
-  max-width: 1100px;
-  margin: 0 auto;
-  padding: 60px 0;
+.btn-box a:nth-child(2):hover{
+    color: #038cc2;
 }
 
-.post-content {
-  height: 320px;
-  width: 1000px;
-  overflow: scroll;
+.btn-box a:nth-child(2)::before {
+    background: #07304e;
 }
 
-.post-author img {
-  width: 150px;
-  height: 150px;
-  vertical-align: middle;
-  border-radius: 130px;
+.btn-box a:nth-child(3) {
+    background: transparent;
+    color: #038cc2;
 }
 
-.post-author>span {
-  margin-left: 16px;
+.btn-box a:nth-child(3):hover{
+    color: #038cc2;
 }
 
-.post-date {
-  color: #154360;
-  font-size: 14px;
-  font-weight: bold;
-  text-transform: uppercase;
-  letter-spacing: 0.1em;
+.btn-box a:nth-child(3)::before {
+    background: #07304e;
 }
 
+.btn-box a::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    background: #07304e;
+    z-index: -1;
+    transition: .75s;
+}
+
+.btn-box a:hover::before {
+    width: 100%;
+}
+
+
+/* About Me Page*/
 .about {
-  float: none;
+    height: 100vh;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 70px 10% 0;
 }
 
-.about-author img {
-  width: 200px;
-  height: 200px;
-  vertical-align: middle;
-  border-radius: 180px;
+
+/* Portfolio Page*/
+
+.portfolio {
+    height: 100vh;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 70px 10% 0;
 }
 
-/*Footer*/
-
-footer {
-  background-color: #242f44;
-  padding: 40px 0px 70px 0px;
+/* Contact Page */
+.contact {
+    height: 100vh;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 70px 10% 0;
 }
 
-footer h3 {
-  color: white;
-  text-transform: uppercase;
-  letter-spacing: 0.1em;
+/* Social Buttons*/
+
+.home-sci {
+    position: absolute;
+    bottom: 40px;
+    width: 170px;
+    display: flex;
+    justify-content: space-between;
 }
 
-footer p {
-  color: white;
+.home-sci a {
+    position: relative;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    background: transparent;
+    border: 2px solid #038cc2;
+    border-radius: 50%;
+    font-size: 20px;
+    color: #038cc2;
+    text-decoration: none;
+    z-index: 1;
+    overflow: hidden;
+    transition: .75s;
 }
 
-.foot-container {
-  max-width: 1400px;
-  margin: 0 auto;
+.home-sci a:hover {
+    color: #038cc2;
 }
 
-#links, #story {
-  min-width: 300px;
-  display: inline-block;
-  vertical-align: top;
+.home-sci a::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    background: #07304e;
+    z-index: -1;
+    transition: .75s;
 }
 
-#story {
-  float: right;
-}
-
-#links {
-  float: inherit;
-}
-
-#footer a {
-  color: white;
-  text-decoration: none;
-}
-
-/*Social Media buttons*/
-
-.fa {
-  padding: 20px;
-  font-size: 30px;
-  width: 50px;
-  text-align: center;
-  text-decoration: none;
-  float: left;
-}
-
-.fa:hover {
-  opacity: 0.7;
-}
-
-/* LinkedIn */
-
-.fa-linkedin {
-  background: #3B5998;
-  color: white;
-}
-
-/* Twitter */
-
-.fa-twitter {
-  background: #55ACEE;
-  color: white;
+.home-sci a:hover::before {
+    width: 100%;
 }
